syntax = "proto3";


// 光电设备测量数据格式
message MyMessageBody {
  /* 考虑到当前时刻可能需要更精确的表示，可以选择使用 uint64 类型，以毫秒为单位表示。
  假设当前时刻为 2024 年 5 月 6 日 10 时 30 分 15 秒，可以表示为： 
  uint64_t current_time = 1735227015000;（这个值表示从 Unix 时间戳起点开始的毫秒数） */
  uint64 current_time = 1;       // 当前时刻，量化单位为0.1ms  
  string device_status = 2;       // 设备状态 8bit
  float azimuth = 3;              // 方位角，360°
  float elevation = 4;            // 俯仰角，360°
  int32 azimuth_offset = 5;      // 方位脱靶量，0.5＂
  int32 elevation_offset = 6;    // 俯仰脱靶量，0.5＂
  float velocity = 7;             // 测速值，0.001m/s
  uint32 distance = 8;            // 测距值，0.01m
  int32 brightness = 9;          // 目标亮度，0.1星等
}

